--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+server.servlet.context-path=/pix
+api.prefix=/api
+api.version=v1
+
+#spring.security.user.name=tsswebapps
+#spring.security.user.password=S3gur0@Admin
+#spring.secutiry.user.roles=ADMIN
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+
+
+spring.application.name=pix-proxy
+
 
